# parkinsons-fog

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
fog/: __init__.py  dataset.py  defines.py  model.py  preprocess.py  train.py  utils.py
notebooks/: eda.ipynb
