[tool.poetry]
name = "fog"
version = "0.1.0"
description = "Parkinson's Freezing of Gait Prediction"
license = "BSD-3-Clause"
authors = ["Adam Page <adam.page@ambiq.com>"]
readme = "README.md"
homepage = "https://ambiq.ai"
packages = [
    { include = "fog" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow-macos = {version = "^2.13.0", platform = "darwin"}
tensorflow = {version = "^2.13.0", markers = "sys_platform != 'darwin'"}
numpy = "^1.22"
pydantic = "^1.10.2"
scikit-learn = "^1.3.0"
plotly = "^5.15.0"
tqdm = "^4.65.0"
rich = "^13.4.2"
scipy = "^1.11.1"
fastparquet = "^2023.7.0"
seaborn = "^0.12.2"
orjson = "^3.9.2"
pydantic-argparse = "^0.8.0"
kaggle = "^1.5.15"
wandb = "^0.15.5"

[tool.poetry.group.dev.dependencies]
ipython = "^8.14.0"

